# ucmd

./: .env  .gitignore  Cargo.toml  makefile  readme.md
.github/workflows/: rust.yml
doc/: readme.md
proj/: Cargo.toml  env.yaml
proj/rcmd-core/: Cargo.toml
proj/rcmd-core/src/: lib.rs  log.rs  queue.rs
proj/rcmd-core/src/util/: filesys.rs  mod.rs  nsdk.rs  shcmd.rs
proj/src/: cli.yaml  cli.yml  env.yaml  main.rs  package.yaml
proj/src/static/: .ucmd  build-ab  build-player  env-v2
proj/src/subcmd/: basecmd.rs  build_ab.rs  build_player.rs  gen_conf.rs  mod.rs
proj/src/subcmd/players/: cocosv2.rs  mod.rs  unity.rs
proj/src/util/: filesys.rs  gen_ios.rs  mod.rs  shcmd.rs
test/: .ucmd  .ucmd_2
test/.ucmd_hook/: AfterBinBuild  BeforeBinBuild  BeforeGenUnity
test/.ucmd_hook/after/: ios_at.py
test/.ucmd_hook/lib/: xcode_mode.py
test/config/: .ucmd
test/env/pinyin/: release.yaml
test/env/test/: release.yaml
test/env/tips/: release.yaml
test/hook/: AfterGenUnity  env.yml
test/hook/after/: __init__.py  android_at.py
ucmd/: Cargo.toml
ucmd/src/: cli.yml  main.rs
ucmd/src/static/: .ucmd  .ucmd-ab
ucmd/src/subcmd/: basecmd.rs  build_player.rs  gen_conf.rs  mod.rs
ucmd/src/subcmd/players/: cocosv2.rs  mod.rs  unity.rs
ucmd_afterhook/: Cargo.toml
ucmd_afterhook/src/: core.rs  main.rs
ucmd_afterhook/src/android/: buildbin.rs  mod.rs
ucmd_afterhook/src/ios/: buildbin.rs  mod.rs
ucmd_afterhook/test/.ucmd_build/: .env
