[package]
name = "ucmd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
rcmd-core = { git = "https://gitee.com/heyzf/rcmd-core.git", commit="ec802b669d8cf5169a821fc6827c9a74f7b6464f"}