[package]
name = "rcmd-core"
version = "0.1.0"
edition = "2018"
authors = ["dwb"]
description = "base commond tools for gamedevalop.Most of them are i/o, zip, time, crypto helpful static methods."
license = "0BSD OR MIT OR Apache-2.0"
keywords = ["command", "game develop", "dwb"]
exclude = [
    "target/*",
    "test/",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#base
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
#log
log = "0.4"
fern = "0.5"
#yaml
yaml-rust = "0.4"
#time
chrono = "0.4"
lazy_static = "1.4.0"
#zip
zip = "0.5"
zip-extensions = "0.6"
walkdir = "2"
#crypto
rust-crypto = "^0.2"